kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: contoso-website
  type: ClusterIP
