kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.<CLUSTER_SPECIFIC_DNS_ZONE>
      http:
        paths:
          - backend:
              serviceName: contoso-website
              servicePort: 80
            path: /
